--- a/index.html
+++ b/index.html
@@ -1,48 +1,73 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/landingpage_style.css">
+    <link rel="stylesheet" href="./css/nav_style.css">
+    <link rel="stylesheet" href="./css/footer_style.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <title>Motipatte - Home</title>
 
-	<head>
-		<title>TATAKAE Website</title>
-		<meta charset="UTF-8">
-		<meta name="description" content="This is our submission for the round 3 of the Front End Battle">
-		<meta name="keywords" content="HTML, CSS, JavaScript">
-		<meta name="author" content="Trisham Chevish Shubhum">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./style.css">
-		<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-	</head>
+    <div class="navbar">
+        <div class="pagetitle">
+            <h2 class="headingtitlename">Motipatte</h2>
+        </div>
+        <img src="./img/logo.png" height="75px">
+        <div class="navlinks">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Appointment</a></li>
+                <li><a href="#" id="active">FAQ</a></li>
+                <li><a href="#">Article Feed</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
 
-	<body>
-		<section>
-			<h1 class="FAQHeading">Frequently Asked Questions</h1>
-		</section>
-		<section class="questions1">
-			<div class="container1">
-				<h3 class="ques">qdihqwd wqdihwqd wqdihwqd wqdiowqd wdqwioqhd dwqidh</h3>
-				<!--<h4 class="ans">Answer</h4>-->
-			</div>
-			<div class="container2">
-				<h3 class="ques">qdihqwd wqdihwqd wqdihwqd wqdiowqd wdqwioqhd dwqidh</h3>
-				<!--<h4 class="ans">Answer</h4>-->
-			</div>
-		</section>
-		<section class="questions2">
-			<div class="container3">
-				<h3 class="ques">qdihqwd wqdihwqd wqdihwqd wqdiowqd wdqwioqhd dwqidh</h3>
-				<!--<h4 class="ans">Answer</h4>-->
-			</div>
-		</section>
-		<section class="questions1">
-			<div class="container1">
-				<h3 class="ques">qdihqwd wqdihwqd wqdihwqd wqdiowqd wdqwioqhd dwqidh</h3>
-				<!--<h4 class="ans">Answer</h4>-->
-			</div>
-			<div class="container2">
-				<h3 class="ques">qdihqwd wqdihwqd wqdihwqd wqdiowqd wdqwioqhd dwqidh</h3>
-				<!--<h4 class="ans">Answer</h4>-->
-			</div>
-		</section>
-	</body>
-
-
+</head>
+<body>
+    <section class="heading">
+        <div class="heading-text">
+            <h1 class="heading-title">Animals deserve to treated right</h1>
+            <p class="heading-subtitle">They are living beings after all. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, maiores</p>
+        </div>
+    </section>
+    <section class="about-us">
+        <div class="about-container">
+            <h2 class="secondary-title">Who are we?</h2>
+            <p class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima dolorem labore nesciunt autem asperiores nihil incidunt ad quam, quisquam numquam, accusamus fugit cumque voluptatem. Soluta tempora inventore nulla natus optio.</p>
+        </div>
+        <div class="about-container">
+            <h2 class="secondary-title">What we do</h2>
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quaerat accusantium totam minima corporis ullam necessitatibus sed mollitia optio vitae?</p>
+        </div>
+    </section>
+    <section class="our-work">
+        <h2 class="secondary-title title-work">Our Work</h2>
+        <div class="gallery">
+            <img class="img1" src="img/dog-4231269_1920.jpg" alt="">
+            <img class="img2" src="img/dog-1861839_1920.jpg" alt="">
+            <img class="img3" src="img/cat-339707_1920.jpg" alt="">
+            <img class="img4" src="img/bird-feeder-5478147_1920.jpg" alt="">
+            <img class="desktop-grid img5" src="img/boxer-dogs-1321216_1920.jpg" alt="">
+            <img class="desktop-grid img6" src="img/cat-2797401_1920.jpg" alt="">
+        </div>
+    </section>
+    <section class="adoption">
+        <div class="adoption-container">
+            <h2 class="secondary-title adoption-title">Consider adopting a pet</h2>
+            <p class="content adoption-content">Allow them to be part of your family. They deserve so much love</p>
+            <button class="btn-adopt">Adopt a pet</button>
+        </div>
+    </section>
+    <footer>
+        <h3 class="mini-title">Tell the world</h3>
+        <div class="icons-container">
+            <img class="icon" src="img/facebook.svg" alt="">
+            <img class="icon" src="img/twitter.svg" alt="">
+        </div>
+    </footer>
+</body>
 </html>
