--- a/FAQ.html
+++ b/FAQ.html
@@ -12,25 +12,24 @@
 		<link rel="stylesheet" href="./css/nav_style.css">
 		<link rel="stylesheet" href="./css/footer_style.css">
 		<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
+	</head>
+	<header>
 		<div class="navbar">
 			<div class="pagetitle">
-				<h2 class="heading">Motipatte</h2>
+				<h2 class="headingtitlename">Motipatte</h2>
 			</div>
-			<img src="./img/logo.png" height="75vh">
+			<img src="./img/logo.png" height="75px">
 			<div class="navlinks">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Appointment</a></li>
-					<li><a href="#" id="active">FAQ</a></li>
-					<li><a href="#">Article Feed</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="appointment.html">Appointment</a></li>
+					<li><a href="FAQ.html" id="active">FAQ</a></li>
+					<li><a href="article_feed.html">Article Feed</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
-
-	</head>
-
+	</header>
 	<body>
 		<section>
 			<h1 class="FAQHeading">Frequently Asked Questions</h1>
