--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./css/footer_style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Motipatte - Home</title>
-
+</head>
+<header>
     <div class="navbar">
         <div class="pagetitle">
             <h2 class="headingtitlename">Motipatte</h2>
@@ -17,16 +18,15 @@
         <img src="./img/logo.png" height="75px">
         <div class="navlinks">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Appointment</a></li>
-                <li><a href="#" id="active">FAQ</a></li>
-                <li><a href="#">Article Feed</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="appointment.html">Appointment</a></li>
+                <li><a href="FAQ.html" id="active">FAQ</a></li>
+                <li><a href="article_feed.html">Article Feed</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
-
-</head>
+</header>
 <body>
     <section class="heading">
         <div class="heading-text">
@@ -62,12 +62,12 @@
             <button class="btn-adopt">Adopt a pet</button>
         </div>
     </section>
-    <footer>
-        <h3 class="mini-title">Tell the world</h3>
-        <div class="icons-container">
-            <img class="icon" src="img/facebook.svg" alt="">
-            <img class="icon" src="img/twitter.svg" alt="">
-        </div>
-    </footer>
 </body>
+<footer>
+    <h3 class="mini-title">Tell the world</h3>
+    <div class="icons-container">
+        <img class="icon" src="img/facebook.svg" alt="">
+        <img class="icon" src="img/twitter.svg" alt="">
+    </div>
+</footer>
 </html>
