--- a/article_feed.html
+++ b/article_feed.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/article_feed_style.css">
+    <link rel="stylesheet" href="./css/nav_style.css">
+    <link rel="stylesheet" href="./css/footer_style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Article Feed</title>
 </head>
+<header>
+    <div class="navbar">
+        <div class="pagetitle">
+            <h2 class="headingtitlename">Motipatte</h2>
+        </div>
+        <img src="./img/logo.png" height="75px">
+        <div class="navlinks">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="appointment.html">Appointment</a></li>
+                <li><a href="FAQ.html" id="active">FAQ</a></li>
+                <li><a href="article_feed.html">Article Feed</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</header>
 <body>
     <section class="header"></section>
     <section class="article-section">
@@ -53,4 +72,11 @@
         </div>
     </section>
 </body>
+<footer>
+    <h3 class="mini-title">Tell the world</h3>
+    <div class="icons-container">
+        <img class="icon" src="img/facebook.svg" alt="">
+        <img class="icon" src="img/twitter.svg" alt="">
+    </div>
+</footer>
 </html>
